--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,6 @@
 #Archivo de configuración
+separator=-
 format=%d{HH:mm:ss} - %p - %t %n %m %n %F %n fruta
 level=WARN
-separator=-
-
+path=C:\ - C:\logs
+console=true
