Agrego funcionalidad para el uso de la clase MessageParser. Finalizo las pruebas unitarias.

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 #Archivo de configuración
-separator=-
-format=%d{HH:mm:ss} - %p - %t %n %m %n %F %n fruta
+separator=+
+format=%d{HH:mm:ss} + %p + %t %n %m + %F %n hola - fin
 level=WARN
-path=C:\ - C:\logs
+path=C:\\ + C:\\logs
 console=true
