--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
-#Archivo de configuración
+#Archivo de configuracion
 separator=+
 format=%d{HH:mm:ss} + %p + %t %n %m + %F %n hola - fin
 level=WARN
-path=C:\\ + C:\\logs
+path=C:\\log1.txt + C:\\logs\\log2.txt
 console=true
