--- a/config.properties
+++ b/config.properties
@@ -2,5 +2,5 @@
 separator=+
 format=%d{HH:mm:ss} + %p + %t %n %m + %F %n hola - fin
 level=WARN
-path=C:\\log1.txt + C:\\logs\\log2.txt
+path=log1.txt + log2.txt
 console=true
