--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -21,5 +21,10 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>1.7.1</version>
+  </dependency>
   </dependencies>
 </project>
