Implementacion del Adapter para el binding de SL4J

--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -37,5 +37,10 @@
 	<artifactId>gson</artifactId>
 	<version>1.7.1</version>
   </dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.5</version>
+	</dependency>
   </dependencies>
 </project>
