--- a/logging/config.properties
+++ b/logging/config.properties
@@ -4,3 +4,6 @@ format=%d{HH:mm:ss} + %p + %t %n %m + %F %n hola - fin
 level=WARN
 path=log1.txt + log2.txt
 console=true
+regexFilter=.*INFO.*
+customFilter=%p INFO .*%m Inicio de Programa .*
+customSave=MailAppender
