--- a/logging/config.properties
+++ b/logging/config.properties
@@ -5,5 +5,5 @@ level=WARN
 path=log1.txt + log2.txt
 console=true
 regexFilter=.*INFO.*
-customFilter=%p INFO .*%m Inicio de Programa .*
+customFilter=
 customSave=MailAppender
