--- a/logging/config.properties
+++ b/logging/config.properties
@@ -6,5 +6,5 @@ path=log1.txt + log2.txt
 console=true
 regexFilter=.*INFO.*
 customFilter=
-customSave=MailAppender
+customSave=com.fiuba.tecnicas.logging.ext.MailAppender + arg_A + arg_B
 #customFilter=%p INFO .*%m Inicio de Programa .*
